src/_timeline.scss
#timeline_holder {
    .plurk {
        /* Posts Avatar */
        .p_img {
            margin-right: 5px;
            box-shadow: 1px 1px 4px opacify($segment-shadow, 0.2);
        }

        /* Posts Box */
        .plurk_cnt {
            padding: 5px 3px;
            border-radius: 5px;
            background-color: $dim-bg;
            box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
            transition: $transition;

            &:hover {
                background-color: lighten($dim-bg, 5%);
                box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
            }

            /* Pictures Preview*/
            a.pictureservices {
                box-shadow: 0 2px 5px rgba(0,0,0,0.16), 0 2px 5px rgba(0,0,0,0.23);
                border-width: 0;
                padding: 0px;

                img {
                    border-width: 0;
                }
            }

            /* Posts Buttons*/
            .manager {
                opacity: 0.2;
                transition: $transition;

                &:hover {
                    opacity: 1;
                }
            }
        }

        opacity: 0.9;
        
    }

    .plurk.display.plurk_box {
        width: 230%;
    }

    background-image: url("https://raw.githubusercontent.com/LineageOS/android_packages_apps_CMWallpapers/cm-14.1/res/drawable-xxhdpi/iconoclast.png");
    background-size: contain;
    background-position: left top;
}

#timeline_control_holder {
    // Filter Buttons
    ul#filter_tab {
        li > a {
            @include block($segment-shadow);
        }
    }
    
    // Unread Reminder Buttons
    div#updater {
        a {
            @include block($segment-shadow);
            border-radius: 1px 0px 0px 1px;
        }
    }

    .unread_generic {
            @include block($segment-shadow, flase);
            border-radius: 0px 1px 1px 0px;
            font-size: 14px;
            font-weight: 700;
            position: relative;
            float: right;
            bottom: 25px;
            left: 28px;
            padding: 0px;
            width: 1.5em;
    }
}

#form_holder {
    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
    
    .response_box {
        .plurk {
            /* Vertical lines in the beginning of the replys */
            border-left: solid 2px lighten($main-color, 20%);
        }
        
        /* "Likes & Replurks" counting badge */
        div[class$="_count"] {
            @include block($other-shadow)
        }
    }
}

/* Qualifier */
.qualifier {
    @include block($other-shadow, false)
}

